docs-archive/apache-airflow-providers-microsoft-azure/15.2.1/_sources/_api/airflow/providers/microsoft/azure/triggers/msgraph/index.rst.txt
airflow.providers.microsoft.azure.triggers.msgraph
==================================================

.. py:module:: airflow.providers.microsoft.azure.triggers.msgraph


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.azure.triggers.msgraph.ResponseSerializer
   airflow.providers.microsoft.azure.triggers.msgraph.MSGraphTrigger


Module Contents
---------------

.. py:class:: ResponseSerializer(encoding = None)

   ResponseSerializer serializes the response as a string.


   .. py:attribute:: encoding


   .. py:method:: serialize(response)


   .. py:method:: deserialize(response)


.. py:class:: MSGraphTrigger(url, response_type = None, path_parameters = None, url_template = None, method = 'GET', query_parameters = None, headers = None, data = None, conn_id = KiotaRequestAdapterHook.default_conn_name, timeout = None, proxies = None, scopes = None, api_version = None, serializer = ResponseSerializer, pagination_link = False)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   A Microsoft Graph API trigger which allows you to execute an async REST call to the Microsoft Graph API.

   :param url: The url being executed on the Microsoft Graph API (templated).
   :param response_type: The expected return type of the response as a string. Possible value are: `bytes`,
       `str`, `int`, `float`, `bool` and `datetime` (default is None).
   :param method: The HTTP method being used to do the REST call (default is GET).
   :param conn_id: The HTTP Connection ID to run the operator against (templated).
   :param timeout: The HTTP timeout being used by the `KiotaRequestAdapter` (default is None).
       When no timeout is specified or set to None then there is no HTTP timeout on each request.
   :param proxies: A dict defining the HTTP proxies to be used (default is None).
   :param scopes: The scopes to be used (default is ["https://graph.microsoft.com/.default"]).
   :param api_version: The API version of the Microsoft Graph API to be used (default is v1).
       You can pass an enum named APIVersion which has 2 possible members v1 and beta,
       or you can pass a string as `v1.0` or `beta`.
   :param serializer: Class which handles response serialization (default is ResponseSerializer).
       Bytes will be base64 encoded into a string, so it can be stored as an XCom.
   :param pagination_link: Whether `url` was taken from a pagination link of a previous response
       (default is False). When True, its host is verified against the configured Microsoft Graph
       endpoint before the request is made.


   .. py:attribute:: conn_id
      :value: 'msgraph_default'



   .. py:attribute:: timeout
      :value: None



   .. py:attribute:: proxies
      :value: None



   .. py:attribute:: scopes
      :value: None



   .. py:attribute:: api_version
      :value: None



   .. py:attribute:: url


   .. py:attribute:: response_type
      :value: None



   .. py:attribute:: path_parameters
      :value: None



   .. py:attribute:: url_template
      :value: None



   .. py:attribute:: method
      :value: 'GET'



   .. py:attribute:: query_parameters
      :value: None



   .. py:attribute:: headers
      :value: None



   .. py:attribute:: data
      :value: None



   .. py:attribute:: serializer
      :type:  ResponseSerializer


   .. py:attribute:: pagination_link
      :value: False



   .. py:method:: resolve_type(value, default)
      :classmethod:



   .. py:method:: serialize()

      Serialize the HttpTrigger arguments and classpath.



   .. py:method:: get_conn()

      Initiate a new RequestAdapter connection.

      .. warning::
         This method is deprecated.



   .. py:property:: hook
      :type: airflow.providers.microsoft.azure.hooks.msgraph.KiotaRequestAdapterHook



   .. py:method:: run()
      :async:


      Make a series of asynchronous HTTP calls via a KiotaRequestAdapterHook.



